fixed sidenav alignment

--- a/style.css
+++ b/style.css
@@ -13,47 +13,72 @@ body {
 nav {
   position: fixed;
   top: 0px;
-  left: 0px;
-  width: 100vw;
+  left: 250px;
+  width: calc(100vw - 250px);
   height: 4em;
   line-height: 4em;
-  background: #694ad6;
+  letter-spacing: 2px;
+  /* font-size: 24px; */
+  text-align: center;
+  background: rgba(105, 74, 214, 1);
   background: -moz-linear-gradient(
     90deg,
-    #694ad6 0%,
-    #4a76e6 75%,
-    #4ca3f2 100%
+    rgba(105, 74, 214, 1) 0%,
+    rgba(74, 118, 230, 1) 75%,
+    rgba(76, 163, 242, 1) 100%
   );
   background: -webkit-linear-gradient(
     90deg,
-    #694ad6 0%,
-    #4a76e6 75%,
-    #4ca3f2 100%
+    rgba(105, 74, 214, 1) 0%,
+    rgba(74, 118, 230, 1) 75%,
+    rgba(76, 163, 242, 1) 100%
   );
-  background: linear-gradient(90deg, #694ad6 0%, #4a76e6 75%, #4ca3f2 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(102, 72, 213, 1) 0%,
+    rgba(74, 118, 230, 1) 75%,
+    rgba(76, 163, 242, 1) 100%
+  );
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#694ad6",endColorstr="#4ca3f2",GradientType=1);
+  /* background: rgb(74, 118, 230);
+  background: -moz-linear-gradient(
+    90deg,
+    rgba(74, 118, 230, 1) 0%,
+    rgba(58, 114, 166, 1) 55%,
+    rgba(105, 74, 214, 1) 90%
+  );
+  background: -webkit-linear-gradient(
+    90deg,
+    rgba(74, 118, 230, 1) 0%,
+    rgba(58, 114, 166, 1) 55%,
+    rgba(105, 74, 214, 1) 90%
+  );
+  background: linear-gradient(
+    90deg,
+    rgba(74, 118, 230, 1) 0%,
+    rgba(58, 114, 166, 1) 55%,
+    rgba(105, 74, 214, 1) 90%
+  ); */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#4a76e6",endColorstr="#694ad6",GradientType=1);
   color: #ffffff;
   box-shadow: 1px 5px 25px #363d408a;
-  z-index: 5;
-}
-nav h1 {
-  position: relative;
-  text-align: center;
+  z-index: 3;
 }
 /* aside */
 aside {
   position: fixed;
-  top: 4em;
+  top: 0em;
   left: 0px;
   color: #ffffff;
   background-image: url(https://images.pexels.com/photos/276005/pexels-photo-276005.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height: calc(100vh - 4em);
+  /* height: calc(100vh - 4em); */
+  height: 100vh;
   width: 250px;
   box-shadow: 1px 5px 25px #363d408a;
-  z-index: 3;
+  z-index: 5;
 }
 aside::before {
   content: "";
@@ -63,30 +88,74 @@ aside::before {
   width: 100%;
   height: 100%;
   color: #ffffff;
-  background: linear-gradient(
-    rgba(104, 74, 214, 0.9) 0%,
-    rgba(74, 118, 230, 0.9) 75%,
-    rgba(76, 163, 242, 0.9) 100%
+  background: rgba(105, 74, 214, 0.9);
+  background: -moz-linear-gradient(
+    rgba(105, 74, 214, 0.7) 0%,
+    rgba(74, 118, 230, 0.7) 75%,
+    rgba(76, 163, 242, 0.7) 100%
   );
+  background: -webkit-linear-gradient(
+    rgba(105, 74, 214, 0.7) 0%,
+    rgba(74, 118, 230, 0.7) 75%,
+    rgba(76, 163, 242, 0.7) 100%
+  );
+  background: linear-gradient(
+    rgba(105, 74, 214, 0.7) 0%,
+    rgba(74, 118, 230, 0.7) 75%,
+    rgba(76, 163, 242, 0.7) 100%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#694ad6e6",endColorstr="#4ca3f2e6",GradientType=1);
   z-index: -1;
 }
 aside article.brand {
   width: 100%;
 }
+aside .divider {
+  margin: 0.5em 0em;
+}
 aside article.brand img {
   display: block;
   height: 150px;
-  width: 200px;
+  width: 80%;
   margin: 1em auto;
   border-radius: 50%;
 }
 aside article.brand .brand-details {
   text-align: center;
 }
+aside ul.sidenav {
+  width: 100%;
+  list-style: none;
+  line-height: 3em;
+}
+aside ul.sidenav li {
+  /* text-indent: 2em; */
+  padding: 0em 2em;
+}
+aside ul.sidenav li:hover {
+  background: #694ad6;
+  background: -moz-linear-gradient(
+    90deg,
+    #694ad6 0%,
+    #4a76e6 25%,
+    #4ca3f2 100%
+  );
+  background: -webkit-linear-gradient(
+    90deg,
+    #694ad6 0%,
+    #4a76e6 25%,
+    #4ca3f2 100%
+  );
+  background: linear-gradient(90deg, #694ad6 0%, #4a76e6 25%, #4ca3f2 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#694ad6",endColorstr="#4ca3f2",GradientType=1);
+}
 /* Main container */
 main {
   position: absolute;
   top: 4em;
   left: 250px;
+  text-align: center;
+  min-width: calc(100vw - 250px);
+  min-height: calc(100vh - 4em);
   background-color: #eeeeee;
 }
